--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style> * { background-color: blue;}</style>
 
 <h1> Hello World </h1>
-<p> Loreem ipsum</p>
+<p> Loreem</p>
 
 <script> console.log('Hello world!')</script>
