--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <p> mais conteudo </p>
 
+
+<script> console.log('ola mundo')</script>
 <script> console.log('Hello world!')</script>
 
 <!-- comentarios -->
